Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20549

SQL SECURITY DEFINER does not work for INFORMATION_SCHEMA tables

    XMLWordPrintable

Details

    Description

      as root

      create view processlist_as_root as select * from information_schema.processlist;
      

      as unpriivleged user

      select * from processlist_as_root;
      

      does not show all connections, even though the view is SQL SECURITY DEFINER so it should show processlist under root privileges.

      Same problem for I_S.TABLES, I_S.SCHEMATA, etc.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.